app/styles/components/_project-card.scss
project-card {
  background: #FFF;
  border: 1px solid lighten($blue, 25%);
  border-radius: 20px 2px 2px 2px;
  display: inline-block;
  margin-bottom: 20px;
  position: relative;
  width: 100%;
  &[min-width="500px"] {
    border-radius: 12px 2px 2px 12px;
    height: 160px;
    .badge, .badge img {
      height: 100%;
    }
    .badge img {
      width: inherit;
    }
    .information {
      width: 61%;
      padding: 10px 0 0;
    }
  }

  .badge, .badge img {
    display: inline-block;
  }

  .badge img {
    margin-right: 20px;
    width: 100px;
  }

  .information {
    display: inline-block;
    padding: 10px;
    vertical-align: top;
  }
  h2 a, .progress-numbers {
    color: $anchor-color;
  }
  .remaining {
    font-size: 16px;
  }
  .progress-numbers span.metric {
    color: darken($anchor-color, 20%);
    font-weight: 400;
    text-transform: uppercase;
  }
  .progress-numbers {
    display: inline-block;
    font-size: 14px;
    margin-top: 5px;
  }
  .prog-num {
    display: inline-block;
    width: 45%;
    &.negative {
      color: $red;
      font-weight: 600;
    }
  }
  .title {
    display: block;
    margin-bottom: 8px;
    vertical-align: top;
    .ion-checkmark-circled {
      color: $lime;
      position: absolute;
        top: 6px;
        right: 10px;
    }
  }
  h2 {
    font-size: 20px;
    margin-top: 0;
    margin-bottom: 5px;
    a:hover {
      color: $anchor-hover-color;
    }
  }
  .progress-bars {
    margin-top: 6px;
  }
  .progress-bar {
    margin-bottom: 1px;
  }
}

